# Roll

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug_parser
.github/: copilot-instructions.md
bindings/dotnet/Roll.Dice/: Class1.cs
bindings/dotnet/Roll.Dice.Tests/: Roll.Dice.Tests.csproj  UnitTest1.cs
bindings/node/: dice.js  package.json  test.js
bindings/python/: dice.py  test_dice.py
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: lib.rs
build_shared/: roll
build_shared/tests/: test_dice
cmake/: RollConfig.cmake.in
docs/: README.md  api-reference.md  build-guide.md  changelog.md  design-philosophy.md  grammar.md  language-bindings.md  troubleshooting.md  visitor.md
examples/: CMakeLists.txt  demo.cpp
include/: dice.h  dice_core.h  dice_parser.h  roll.h
src/: CMakeLists.txt  custom_dice.c  dice.c  dice_core.c  dice_parser.c  eval.c  internal.h  memory.c  parser.c  rng.c  roll.cpp  trace.c  visitor.c
src/cli/: roll.c
test_build/: RollConfig.cmake  roll
test_build/tests/: test_dice  test_dice_core  test_eval  test_integration  test_memory  test_parser  test_rng  test_trace
tests/: CMakeLists.txt  basic_test.cpp  test_common.h  test_conditional_selection.c  test_dice.c  test_dice_core.c  test_dice_selection.c  test_eval.c  test_integration.c  test_memory.c  test_new_selection_syntax.c  test_parser.c  test_reroll.c  test_rng.c  test_selection_trace.c  test_trace.c  test_visitor.c
